fixed links and updated panel info

--- a/html/panels-ch.html
+++ b/html/panels-ch.html
@@ -24,7 +24,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>论坛板块 | 宾大沃顿中美峰会 2018</title>
+    <title>论坛版块 | 宾大沃顿中美峰会 2018</title>
   </head>
   <body>
 
@@ -133,8 +133,8 @@
           <div class="col-12 col-md-12 row menu-items">
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home-ch">峰会主页</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about-ch">关于我们</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels-ch">论坛板块</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels-ch">参会嘉宾</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels-ch">论坛版块</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/speakers-ch">参会嘉宾</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda-ch">峰会日程</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past-ch">往届峰会</a> </div>
           </div>
@@ -181,7 +181,7 @@
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home-ch">峰会首页</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about-ch">关于我们</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels-ch">论坛版块</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels-ch">参会嘉宾</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/speakers-ch">参会嘉宾</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agend-ch">峰会日程</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past-ch">往届峰会</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/" target="_blank">立即订票</a> </div>
@@ -275,8 +275,8 @@
                 <p>在过去10年期间，全球经济经历了一段漫长又缓慢的复苏期。以美国为首的多国央行维持多年的低利率政策以及萎靡不振的真实经济增长让全球的投资回报持续低迷。这也让大型的机构投资者逐渐将眼光投向新兴市场来寻求更高的增长。在这其中，中国以其快速的经济发展成为了最受关注的市场之一。</p>
                 <p>中国的私人投资在过去几年一直在连续增长。随着中国从出口导向的增长模式逐渐转型至以国内消费驱动的增长模式，全球投资者将有更多的参与空间。另外，中国正以“一带一路”政策引领全球化的进程，此举为其他经济体创造了无数机遇。政府积极鼓励对外投资，并配以利好政策。</p>
                 <p>全球的投资者们该如何更好的驾驭中国市场持续的监管变化、科技产业动荡、以及主要资产类别估值上升等多重因素？中国又会在新一轮全球化中占领何种地位？</p>
-                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月15日, 10:00am - 12:00am</p>
+                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 2:30pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：英文</p>
               </div>
             </div>
@@ -323,30 +323,25 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  科技板块：
+                  科技版块：
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Shuling_Ying.jpeg"/>
+                <div class="speaker-name">应书岭</div>
+                <div class="speaker-title">英雄互娱创始人</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Weixing_Chen.jpeg"/>
+                <div class="speaker-name">陈伟星</div>
+                <div class="speaker-title">快的打车创始人</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
-              </div>
-              <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Kebin_Dai.jpg"/>
+                <div class="speaker-name">戴科彬</div>
+                <div class="speaker-title">猎聘创始人</div>
               </div>
               <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
@@ -364,9 +359,9 @@
             <div class="row panel-desc">
               <div class="col">
                 <p>当今世界，新一轮的科技革命正在孕育兴起，科技创新正加速推进，并深度融合、广泛渗透到人类社会的各个方面，成为重塑世界经济结构和竞争格局、创造人类未来的主导力量。在中国经济发展新常态下，科技创新引领的增长动力正在加快行成。站在新历史起点上的中国，明确提出将科技放在优先发展的战略地位。以互联网、大数据、人工智能、新能源等为核心的新产业、新业态不断涌现，但同时也给许多传统行业带来影响。</p>
-                <p>本次峰会的科技板块将关注以创新科技为核心的新产业对传统行业的冲击。同时，我们也将看到跨平台跨领域的科技公司之间的交流互动。他们，对我们这一代的科技发展有着怎样的展望？我们作为留学生，应该如何好把握自己的身份，抓住热门领域的发展大潮，贡献祖国贡献社会呢？</p>
+                <p>本次峰会的科技版块将关注以创新科技为核心的新产业对传统行业的冲击。同时，我们也将看到跨平台跨领域的科技公司之间的交流互动。他们，对我们这一代的科技发展有着怎样的展望？我们作为留学生，应该如何好把握自己的身份，抓住热门领域的发展大潮，贡献祖国贡献社会呢？</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 14:30pm</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月15日, 10:00am - 12:00pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
@@ -379,7 +374,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  国际关系板块：
+                  国际关系版块：
                 </div>
               </div>
             </div>
@@ -388,7 +383,7 @@
                 <p>在我们即将迎来的新一个十年里，没有任何一对国家间关系比中美关系更加重要。 作为世界前两大经济体、最大的发达国家和最大的发展中国家，美国和中国应如何避免重蹈过去几百年间守成大国和新兴大国跌入“修昔底德陷阱”的覆辙？在本轮全球化浪潮下，“中美合作”能否成为两个大国相处的新常态？</p>
                 <p>在佛罗里达州海湖庄园，习近平主席向特朗普总统表示，“我们有一千条理由把中美关系搞好，没有一条理由把中美关系搞坏”。两国领导人就双方在各层级、各领域加强沟通已达成许多共识。当今时代，如何理解习主席和特朗普总统的这些共识，以及“一代一路”倡议的意义？很多人，特别是学生，想了解这些重大的首脑会晤和论坛能让他们如何受益？中美关系的走向对他们的生活会有什么影响？作为21世纪的青年学生，又能在哪些方面为发展中美关系出力？</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 14:30pm</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 3:00pm - 5:00pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：英文</p>
               </div>
             </div>
@@ -435,20 +430,20 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  房地产板块：
+                  房地产版块：
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Yue_Yuan.jpeg"/>
+                <div class="speaker-name">袁岳</div>
+                <div class="speaker-title">零点有数集团董事长</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Xi_Wang.jpeg"/>
+                <div class="speaker-name">王晞</div>
+                <div class="speaker-title">仁恒置地副总裁</div>
               </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
@@ -477,8 +472,8 @@
               <div class="col">
                 <p>近年来中国房地产投资增速持续下滑，库存不断攀升，销售增长出现疲态。政府出台一系列刺激政策，并将“去库存”列为中央经济工作会议上主要任务之一。在此背景下，一线城市房地产市场率先复苏，而二三线城市的市场表现则差强人意，城市间分化格局进一步加剧。面对当下的楼市特征，房地产行业应如何突破瓶颈，转换思维，优化盈利模式，实现房地产市场从结构到功能的根本转变，成为迫在眉睫的焦点话题。</p>
                 <p>在当下这个充满变革与机遇的时间节点，企业该如何实现从传统模式到新模式的平稳过渡？企业如何在众多转型方向中量体裁衣，避免盲目跟从？国家对这些新模式的兴起又持有怎样的态度与预期？本分论坛将探讨新兴房地产模式与传统房地产模式的碰撞与融合。</p>
-                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 14:30pm</p>
+                <p class="time-location"><i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
+                <p class="time-location"><i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 2:30pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
@@ -492,7 +487,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  娱乐与时尚板块：
+                  娱乐与时尚版块：
                 </div>
               </div>
             </div>
@@ -501,7 +496,7 @@
                 <p>中国文化娱乐产业正处在前所未有的黄金时代。随着2015年影视行业的高速发展与2016、17年票房增速减缓，尽管中国电影票房经历了“过山车式”的大起大落，中国电影正在回归质量，曾经“泡沫化”的中国电影票房也处在“返璞归真”的过程中。除此之外，中国网剧，综艺与其他新媒体相关的影视娱乐输出也处在欣欣向荣的发展中。各大娱乐内容制作与发行公司都跃跃欲试，通过大量资本注入为中国娱乐产业提出新思路。</p>
                 <p>处在转型中的中国娱乐与时尚行业的业内人士会有怎样的反应与看法？近年的行业变化对他们的职业带来了什么样的影响？他们是否真切地感受到了资本注入对娱乐与时尚带来的冲击？即将进入2.0时代的他们对未来有怎样的预期？这些问题将在沃顿中美峰会的娱乐&时尚论坛得到最好的解答。</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 10:00am - 12:00am</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 3:00pm - 5:00pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
@@ -516,9 +511,9 @@
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Ming_Yang.jpg"/>
+                <div class="speaker-name">杨铭</div>
+                <div class="speaker-title">泰洋川禾创始人</div>
               </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
@@ -548,15 +543,15 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  社会责任板块：
+                  社会责任版块：
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Sai_Wang.jpg"/>
+                <div class="speaker-name">王赛</div>
+                <div class="speaker-title">益桥创始人</div>
               </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
@@ -589,8 +584,8 @@
             <div class="row panel-desc">
               <div class="col">
                 <p>“我们这一代”不只是善于创新，敢于挑战的一代，更是勇于承担社会责任，践行可持续发展的一代。在中国经济结构转型的今天，许多社会问题逐步凸显，国家十三五规划和可持续发展目标的实施面临着诸多机遇和挑战。在各方探索者和实践者的努力，以及商业、媒体、科技、创新和文化等元素的融入之下，中国的公益慈善行业正在呈积极态势发展。对企业来讲，社会价值的实现与商业价值同样重要，公益元素可以帮助企业品牌与文化的建设、社会影响力的提升以及战略的转型；对公益机构来讲，社会各界资源的联动有利于社会问题的改善和解决；对政府和媒体来讲，关注社会议题，推动社会发展，传播社会正能量一直都是刚需。因此，本次分论坛将邀请优秀的企业家讨论中国企业可持续发展与社会责任的现状、问题、解决方案和未来展望。</p>
-                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 3:00pm - 5:00pm</p>
+                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月15日, 10:00am - 12:00pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
