--- a/html/speakers-ch.html
+++ b/html/speakers-ch.html
@@ -141,7 +141,7 @@
           <div class="col-12 col-md-12 row menu-items">
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home-ch">峰会主页</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about-ch">关于我们</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels-ch">论坛板块</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels-ch">论坛版块</a> <i class="icofont icofont-dotted-left"></i> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/speakers-ch">参会嘉宾</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda-ch">峰会日程</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past-ch">往届峰会</a> </div>
@@ -323,7 +323,7 @@
             <div class="row" id="first-panel">
               <div class="col">
                 <div class="panels-header">
-                  Finance Panel:
+                  财经版块
                 </div>
               </div>
             </div>
@@ -362,7 +362,7 @@
         <div class="row" id="second-panel">
           <div class="col">
             <div class="panels-header">
-              Technology Panel
+              科技版块
             </div>
           </div>
         </div>
@@ -386,7 +386,7 @@
           <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Weixing_Chen.jpeg"/ speaker-name="WeixingChen">
             <div class="speaker-name">陈伟星</div>
-            <div class="speaker-title">快滴打车创始人</div>
+            <div class="speaker-title">快的打车创始人</div>
 
             <!-- The Modal -->
             <div id="WeixingChenBio" class="modal">
