--- a/html/panels.html
+++ b/html/panels.html
@@ -142,7 +142,7 @@
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">Home</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">About</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels">Panels</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/speakers">Speakers</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
           </div>
@@ -283,8 +283,8 @@
                 <p>For the past decade, low real interest rates, declining productivity growth, and lack of attractive domestic investment opportunities have forced global investors to seek higher returns in less familiar territories. During this process, emerging markets, specifically China, have stood out with its rapid developments in almost all areas of the economy. </p>
                 <p>Private investment in China has been growing consistently for the past several years. As China shifts from an export-driven growth model towards a domestic consumption-driven growth model, there will be more room for global investors to participate. In addition, China is leading the globalization initiative with its “One Belt, One Road” policy, thus creating a myriad of opportunities for other world economies. Meanwhile, the government is encouraging inbound investments with favorable policies. Domestically, the rapid expansion of technology firms is supplying momentum for the world’s largest emerging market.</p>
                 <p>With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can investors prepare themselves to capitalize on the new wave of opportunities in China? What role should China play in the next generation of Globalization?</p>
-                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 15th, 10:00am - 12:00am</p>
+                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 2:30pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: English</p>
               </div>
             </div>
@@ -337,24 +337,19 @@
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Shuling_Ying.jpeg"/>
+                <div class="speaker-name">Shuling Ying</div>
+                <div class="speaker-title">Founder and CEO of Hero Entertainment Group</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Weixing_Chen.jpeg"/>
+                <div class="speaker-name">Weixing Chen</div>
+                <div class="speaker-title">Founder of Kuaidi Technology</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
-              </div>
-              <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Kebin_Dai.JPG"/>
+                <div class="speaker-name">Kebin Dai</div>
+                <div class="speaker-title">Founder of Liepin</div>
               </div>
               <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
@@ -396,7 +391,7 @@
                 <p>As we are approaching a new decade, no relationship will be as important to the twenty-first century as the one between the United States, the largest developed country, and China, the largest developing country. As the world’s two foremost economic superpowers, how can United States and China avoid the “Thucydides Trap”— recurrent conflicts between the existing and rising powers. Under the present wave of globalization, could Sino-US cooperation become the new status quo? Currently, some Americans support U.S. pursuing an integrative strategy with China, as the latter continues to expand its global presence. Some others, with an alternative understanding of China and the dynamics of the world, believe that China’s strategic interests are incompatible with those of the United States. </p>
                 <p>In today's world, how do we make sense of the consensus between the two presidents and the significance of the Belt and Road initiative? From these significant summits and forums, many people, particularly the students, want to know what the takeaways are for them. What will be the impact of the Sino-US relationship on their lives? What can the 21st century students specifically contribute to help strengthen the two countries’ relationship?</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 3:00pm - 5:00pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: English</p>
               </div>
             </div>
@@ -449,14 +444,14 @@
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Yue_Yuan.jpeg"/>
+                <div class="speaker-name">Yue Yuan</div>
+                <div class="speaker-title">Chairman of Dataway Horizon</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Xi_Wang.jpeg"/>
+                <div class="speaker-name">Xi Wang</div>
+                <div class="speaker-title">Vice President of Yanlord Land</div>
               </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
@@ -486,8 +481,8 @@
                 <p>Recently, the increasing rate of Chinese real estate industry has been declining. The skyrocketing price has resulted in an exceeding supply in the market. As the transaction volume could not keep up with the pace of increasing supply, the government introduced stimulatory policies aiming to invigorate the market by trying to reduce the inventory. However, regional markets responded to such initiatives differently. While the market started rejuvenating in first-tier metropolis, markets in second or third-tier cities didn’t see as much an improvement. Facing such a stagnant market, how traditional real-estate companies should innovate became a widely-discussed issue.</p>
                 <p>Several solutions emerged in this tide of industry transformation that involves changes in the landscapes of multi-function real estate, commercial real estate, as well as both experience-based and public housing projects.</p>
                 <p>In this pivotal moment of transformation, how should the traditional real estate industry adjust smoothly into this new era? How should companies adapt based on their unique characteristics instead of blindly following the trend? What attitude and expectations does the government have about this new mode? These topics and questions are what the real estate panel will ponder upon.</p>
-                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
+                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 2:30pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
@@ -510,7 +505,7 @@
                 <p>As the Chinese entertainment and fashion industries have matured over recent years, the integration of new media and the infusion of capital have greatly impacted their development. Chinese agencies have begun to play increasingly important roles in bringing new talents into the film and entertainment industry; at the same time, established artists continue to find ways to maximize and realize their commercial value. In short, talent-centered mode of production and new media-focused means of distribution have and will continue to disrupt Chinese entertainment. Moreover, consumer demand is also shifting. For example, Iqiyi’s reality show, “Rap of China”, was not only wildly successful, but it was also a show produced following a different line of thinking. In fashion, on the other hand, celebrities have become the “new faces” in fashion shows, advertisements and magazines covers.</p>
                 <p>In the near future, will we be witnesses to a new age of Chinese entertainment? What would already-established figures say about current Chinese fashion and entertainment? How have industry changes influenced their lines of work? What are their opinions on the impact that an increasing influx of capital has on the industry? Moreover, what do they envision for the future of the industry? These questions will be answered at the Entertainment Panel of the Penn Wharton China Summit.</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 10:00am - 12:00am</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 3:00pm - 5:00pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
@@ -525,9 +520,9 @@
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Ming_Yang.jpg"/>
+                <div class="speaker-name">Ming Yang</div>
+                <div class="speaker-title">Founder of Mountain Top</div>
               </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
@@ -563,9 +558,9 @@
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
-                <div class="speaker-name">Speaker</div>
-                <div class="speaker-title">To Be Announced</div>
+                <img class="speaker-img" src="../assets/images/Sai_Wang.jpg"/>
+                <div class="speaker-name">Sai Wang</div>
+                <div class="speaker-title">Founder of Yiqiao</div>
               </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
@@ -601,8 +596,8 @@
                 <p>Today, with the transformation of China's economic structure, many social problems have started to come about, and the implementation of the national 13th five-year plan and sustainable development goals faces many opportunities and challenges. With the efforts of all the explorers and practitioners, as well as the integration of business, media, science and technology, innovation and culture, China's philanthropic industry is developing in a positive way. For enterprises, the realization of social value is as important as that of the commercial value. The public welfare element can aid the construction of enterprise brand and culture, the promotion of social influence and the transformation of strategy. For public welfare institutions, the linkage of social resources is conducive to the improvement and solution of social problems. For government and media, focusing on social issues, promoting social development, and spreading the positive energy of society have always been needed.
                 </p>
                 <p>Therefore, our panel will invite outstanding entrepreneurs to discuss the status, problems, solutions and future prospects of sustainable development and social responsibility of Chinese enterprises. </p>
-                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 3:00pm - 5:00pm</p>
+                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 15th, 10:00am - 12:00pm</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
