The great update

--- a/html/agenda-ch.html
+++ b/html/agenda-ch.html
@@ -235,9 +235,20 @@
     -->
 
     <div class="section-free">
-      <div class="row">
-        <div class="col-12 col-md-4 center-txt">
+      <div class="row mobile-hide">
+        <div class="col-12 col-md-3 center-txt">
           <h2 class="agenda-date">四月十三日</h2>
+        </div>
+        <div class="col-12 col-md-6 center-txt">
+          <h2 class="agenda-date">四月十四日</h2>
+        </div>
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date">四月十五日</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date mobile-only">四月十三日</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
               4:00PM - 6:00PM
@@ -249,7 +260,21 @@
               Sheraton in University City
             </div>
             <div class="item-desc">
-              由PWCS与沃顿商学院代表共同举办面向媒体朋友的新闻发布会
+              媒体参与由峰会代表，沃顿校方代表组织的媒体发布会，媒体届时可以向峰会嘉宾代表及筹委会代表发问。
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              2:00PM - 6:00PM
+            </div>
+            <div class="item-title">
+              观众注册
+            </div>
+            <div class="item-location">
+              Hilton Inn at Penn
+            </div>
+            <div class="item-desc">
+              观众至指定地点领取峰会手册，票据，名牌及纪念品
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -257,45 +282,31 @@
               6:00PM - 8:00PM
             </div>
             <div class="item-title">
-              职业发展论坛
+              职业发展论坛&部分企业招聘
             </div>
             <div class="item-location">
               Hilton Inn at Penn
             </div>
             <div class="item-desc">
-              由PWCS、猎聘网和中国电信北美分公司共同举办的职业发展论坛
-            </div>
-          </div>
-          <div class="agenda-item left-txt">
-            <div class="item-time">
-              6:00PM - 9:00PM
-            </div>
-            <div class="item-title">
-              VIP 晚宴
-            </div>
-            <div class="item-location">
-              Huntsman Hall
-            </div>
-            <div class="item-desc">
-              沃顿商学院举办晚宴， 以感谢远道而来的嘉宾与PWCS合作伙伴
+              由峰会筹委会代表，猎聘代表及北美电信代表携招聘企业HR／高管进行职业发展讲座。
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 center-txt">
-          <h2 class="agenda-date">四月十四日</h2>
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date mobile-only">四月十四日</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              8:00AM - 10:00AM<br/>
-              10:00AM - 1:00PM(延后注册)
+              8:00AM - 10:00AM (常规)<br/>
+              10:00AM - 1:00PM (延后)
             </div>
             <div class="item-title">
               观众注册
             </div>
             <div class="item-location">
-              Houston Hall Bodek Lounge
+              Houston Hall Bistro Lounge
             </div>
             <div class="item-desc">
-              观众到场注册，领取峰会手册、峰会名牌、和峰会纪念品
+              观众至指定地点领取峰会手册，票据，名牌及纪念品
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -303,14 +314,15 @@
               9:00AM - 11:00AM
             </div>
             <div class="item-title">
-              开幕式
+              峰会开幕式
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
+              峰会筹委会主席致辞鸣谢，校方代表致辞，主讲嘉宾就责任这一主题展开演讲<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              傅莹，郭广昌，张爽，苏芒，Philip Rosler<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -318,53 +330,63 @@
               12:30PM - 2:30PM
             </div>
             <div class="item-title">
-              分论坛 1: 房地产板块
+              中国地产转型新方向
             </div>
             <div class="item-location">
               Annenberg Center
             </div>
             <div class="item-desc">
               在这个充满机遇的时间节点，企业该如何实现从传统模式到新模式的平稳过渡？<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              周忻，袁岳，王晞，王戈宏<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
+              曹可凡<br/>
             </div>
             <div class="item-title">
-              分论坛 2: 金融市场板块
+              变革与机遇：塑造中国新投资领域
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
               投资者们该如何驾驭中国市场持续的监管变化、科技产业动荡等多重因素？<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              Albert Ng，Yup Kim，Guang Yang，温晓东<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
+              江予菲<br/>
             </div>
           </div>
+        </div>
+        <div class="col-12 col-md-3 center-txt">
           <div class="agenda-item left-txt">
             <div class="item-time">
               3:00PM - 5:00PM
             </div>
             <div class="item-title">
-              分论坛 3: 时尚娱乐板块
-            </div>
-            <div class="item-location">
-              Irvine Auditorium
-            </div>
-            <div class="item-desc">
-              近年的行业大转型为娱乐以及时尚产业带来了怎样的影响？<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
-            </div>
-            <div class="item-title">
-              分论坛 4: 国际关系板块
+              互信与挑战：新时代下的中美关系
             </div>
             <div class="item-location">
               Annenberg Center
             </div>
             <div class="item-desc">
               留学生应如何理解习主席和特朗普总统达成的共识以及“一代一路”的意义？<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              傅莹, 陆克文，崔天凯<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
+              Avery Goldstein<br/>
+            </div>
+            <div class="item-title">
+              娱乐新时代：构建中美文化桥梁
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              近年的行业大转型为娱乐以及时尚产业带来了怎样的影响？<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              Wen Zhou, 杨铭, 温晓东, 马薇薇<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
+              江予菲<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -372,13 +394,13 @@
               5:00PM - 7:30PM
             </div>
             <div class="item-title">
-              招聘会
+              招聘会现场
             </div>
             <div class="item-location">
               Annenberg Center
             </div>
             <div class="item-desc">
-              各大公司代表设置展台，与广大有需要的求职者交流。
+              招聘企业将在外场设立展台，供与会者投递简历与企业对接
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -386,13 +408,33 @@
               7:00PM - 9:00PM
             </div>
             <div class="item-title">
-              INNOTALK 创业创新论坛
+              INNO Talk
             </div>
             <div class="item-location">
               Annenberg Center
             </div>
             <div class="item-desc">
-              顶尖的创业团队们与经验丰富的评委和知识渊博的教授能碰撞出怎样的火花？如果你对创业有兴趣，这个机会不容错过！
+              创业企业与资方对谈，探讨大众创新万众创业形势下的思考与突破<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              金城，袁岳，马薇薇<br/>
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              7:00PM - 9:00PM
+            </div>
+            <div class="item-title">
+              社会创新
+            </div>
+            <div class="item-location">
+              The Study
+            </div>
+            <div class="item-desc">
+              中外青年创新故事分享，青年学者互动提问<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              王一舟，苗世明，王赛<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
+              高正<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -400,43 +442,47 @@
               9:00PM - 11:00PM
             </div>
             <div class="item-title">
-              社交晚会
+              菁英派对
             </div>
             <div class="item-location">
-              Marriott Downtown
+              Marriot Downtown
             </div>
             <div class="item-desc">
-              在结束了一天紧凑的议程后，欢迎大家参与晚上的社交晚会。<br/>
+              在专业正式的研讨会之后以放松，娱乐为主题的菁英派对<br/>
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 center-txt">
-          <h2 class="agenda-date">四月十五日</h2>
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date mobile-only">四月十五日</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
               10:00AM - 12:00PM
             </div>
             <div class="item-title">
-              分论坛 5: 社会责任板块
+              企业可持续发展与社会责任
             </div>
             <div class="item-location">
               Annenberg Center
             </div>
             <div class="item-desc">
               企业家们如何看待企业可持续发展与社会责任，并对未来有怎样的展望？<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              朱旭东，邓飞，王振耀，潘江雪<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
+              曹可凡<br/>
             </div>
             <div class="item-title">
-              分论坛 6: 新兴科技板块
+              技术革新的挑战与机遇
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
               以创新科技为核心的新产业将对传统行业造成怎样的冲击？<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              应书岭，陈伟星，戴科彬，Jeff Garzik，初帅<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
+              陈一佳
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -444,14 +490,15 @@
               12:30PM - 3:15PM
             </div>
             <div class="item-title">
-              闭幕式
+              峰会闭幕式
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
+              峰会筹委会副主席致辞鸣谢，校方代表致辞，主讲嘉宾就创新这一主题展开演讲<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
+              崔天凯，Pete Walker，王振耀，王高飞<br/>
             </div>
           </div>
         </div>
