--- a/html/about-ch.html
+++ b/html/about-ch.html
@@ -630,7 +630,7 @@
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/michelle-cai-a87400149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/Michelle.Cai04" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.facebook.com/Michelle.Cai04" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <!-- <div class="col-lg-2 col-sm-3 col-6">
@@ -746,7 +746,7 @@
         <h5>Member</h5>
       </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/Chelsie_Xu.jpg">
+        <img class="img-fluid" src="../assets/images/Love.jpg">
         <h4>Chelsie Xu</h4>
         <h5>Member</h5>
         <div class="links">
