--- a/html/agenda.html
+++ b/html/agenda.html
@@ -235,67 +235,78 @@
     -->
 
     <div class="section-free">
-      <div class="row">
-        <div class="col-12 col-md-4 center-txt">
+      <div class="row mobile-hide">
+        <div class="col-12 col-md-3 center-txt">
           <h2 class="agenda-date">April 13th</h2>
+        </div>
+        <div class="col-12 col-md-6 center-txt">
+          <h2 class="agenda-date">April 14th</h2>
+        </div>
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date">April 15th</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date mobile-only">April 13th</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
               4:00PM - 6:00PM
             </div>
             <div class="item-title">
-              Media Conference
+              Press Release
             </div>
             <div class="item-location">
               Sheraton in University City
             </div>
             <div class="item-desc">
-              Hosted by PWCS and Representatives from the Wharton School. An opportunity for media to ask questions.
+              Presentation by representatives from the Summit Board and the Wharton school to media.
             </div>
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              6:00PM - 7:30PM
+              2:00PM - 6:00PM
             </div>
             <div class="item-title">
-              Career Advising Panel
+              Audience Registration
             </div>
             <div class="item-location">
               Hilton Inn at Penn
             </div>
             <div class="item-desc">
-              Hosted by PWCS, Liepin.com, and representative from China Telecom North America Branch.
+              Audience register arrival with staff. Summit brochure, and badge will be distributed.
             </div>
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              6:00PM - 9:00PM
+              6:00PM - 8:00PM
             </div>
             <div class="item-title">
-              VIP Banquet
+              Career Fair and Panel Presentation
             </div>
             <div class="item-location">
-              Huntsman Hall
+              Hilton Inn at Penn
             </div>
             <div class="item-desc">
-              A Dinner Hosted by PWCS and the Wharton School to thank our distinguished guests and partners
+              Presentation by representatives from the Summit Board, Liepin and HR from participating companies.
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 center-txt">
-          <h2 class="agenda-date">April 14th</h2>
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date mobile-only">April 14th</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              8:00AM - 10:00AM<br/>
-              10:00AM - 1:00PM (Delayed Registration)
+              8:00AM - 10:00AM (Regular)<br/>
+              10:00AM - 1:00PM (Late)
             </div>
             <div class="item-title">
-              General Registration
+              Audience Registration
             </div>
             <div class="item-location">
-              Houston Hall Bodek Lounge
+              Houston Hall Bistro Lounge
             </div>
             <div class="item-desc">
-              Audience to register and pick up summit brochure, name tags, and souvenir.
+              Audience register arrival with staff. Summit brochure, and badge will be distributed.<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -309,8 +320,9 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
+              Welcoming speech will be given by Summit President and Dean of the Wharton School, followed by five keynote speakers.<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
+              Ying Fu, Guangchang Guo, Shuang Zhang, Mang Su, Philip Rosler<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -318,7 +330,7 @@
               12:30PM - 2:30PM
             </div>
             <div class="item-title">
-              PANEL 1: Real Estate
+              The New Direction of Chinese Real Estate Development
             </div>
             <div class="item-location">
               Annenberg Center
@@ -326,10 +338,12 @@
             <div class="item-desc">
               In this pivotal moment of transformation, how should the traditional real estate industry adjust smoothly into this new era, and how should companies adapt based on their unique characteristics instead of blindly following the trend?<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
+              Xin Zhou, Yue Yuan, Xi Wang, Gehong Wang<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Host:</span><br/>
+              Kefan Cao<br/>
             </div>
             <div class="item-title">
-              PANEL 2: Finance
+              Disruptions and Opportunities: Shaping New Investment Landscape in China
             </div>
             <div class="item-location">
               Irvine Auditorium
@@ -337,26 +351,19 @@
             <div class="item-desc">
               With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can global investors better navigate the volatile but evolving Chinese market and economy?<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
+              Albert Ng, Yup Kim, Guang Yang, Xiaodong Wen<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Host:</span><br/>
+              Yufei Jiang<br/>
             </div>
           </div>
+        </div>
+        <div class="col-12 col-md-3 center-txt">
           <div class="agenda-item left-txt">
             <div class="item-time">
               3:00PM - 5:00PM
             </div>
             <div class="item-title">
-              PANEL 3: Entertainment
-            </div>
-            <div class="item-location">
-              Irvine Auditorium
-            </div>
-            <div class="item-desc">
-              What would already-established figures say about current Chinese fashion and entertainment, and what are their opinions on the impact that an increasing influx of capital has on the industry? <br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
-            </div>
-            <div class="item-title">
-              PANEL 4: International Relations
+              Are U.S-China Relations Entering a New Era?
             </div>
             <div class="item-location">
               Annenberg Center
@@ -364,21 +371,22 @@
             <div class="item-desc">
               In today's world, how should students make sense of the consensus between the two presidents of China and the U.S. as well as the significance of the Belt and Road initiative?<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
-            </div>
-          </div>
-          <div class="agenda-item left-txt">
-            <div class="item-time">
-              7:00PM - 9:00PM
+              Ying Fu，Kevin Rudd，Tiankai Cui<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Host:</span><br/>
+              Avery Goldstein<br/>
             </div>
             <div class="item-title">
-              INNOTALK Entreprenuership Panel
+              The New Age of Entertainment: Building the U.S-China Cultural Platform
             </div>
             <div class="item-location">
-              Annenberg Center
+              Irvine Auditorium
             </div>
             <div class="item-desc">
-              A thought-provoking conversation between startup teams, guests, and professors. Innotalk is a wonderful opportunity for anyone interested in learning about the exciting world of startups.<br/>
+              What would already-established figures say about current Chinese fashion and entertainment, and what are their opinions on the impact that an increasing influx of capital has on the industry? <br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
+              Wen Zhou, Ming Yang, Xiaodong Wen, Weiwei Ma<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Host:</span><br/>
+              Jiang Yufei<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -392,7 +400,41 @@
               Annenberg Center
             </div>
             <div class="item-desc">
-              Company Representatives to set up booths. Open to registered audience.
+              Career Fair by participating companies, Audience can deliver resume and exchange contact.
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              7:00PM - 9:00PM
+            </div>
+            <div class="item-title">
+              INNO Talk
+            </div>
+            <div class="item-location">
+              Annenberg Center
+            </div>
+            <div class="item-desc">
+              Conversation between startups, industry leaders and investors<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
+              Chen Jin，Yue Yuan, Weiwei Ma<br/>
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              7:00PM - 9:00PM
+            </div>
+            <div class="item-title">
+              Social Impact
+            </div>
+            <div class="item-location">
+              The Study
+            </div>
+            <div class="item-desc">
+              Young global leaders sharing stories of innovation<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
+              Yizhou Wang, Shiming Miao, Sai Wang<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Host:</span><br/>
+              Zheng Gao<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -400,24 +442,24 @@
               9:00PM - 11:00PM
             </div>
             <div class="item-title">
-              Social Event
+              Social Banquet
             </div>
             <div class="item-location">
-              Marriott Downtown
+              Marriot Downtown
             </div>
             <div class="item-desc">
               After a day's of fruitful agenda, chill out with us at our social event. Talk, dance and drink with your peers.<br/>
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 center-txt">
-          <h2 class="agenda-date">April 15th</h2>
+        <div class="col-12 col-md-3 center-txt">
+          <h2 class="agenda-date mobile-only">April 15th</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
               10:00AM - 12:00PM
             </div>
             <div class="item-title">
-              PANEL 5: Social Responsibility
+              Corporate Sustainability & Social Responsibility
             </div>
             <div class="item-location">
               Annenberg Center
@@ -425,12 +467,12 @@
             <div class="item-desc">
               What are the thoughts of outstanding entrepreneurs on the status, problems, solutions, and future prospects of sustainable development and social responsibility of Chinese enterprises?<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
+              Xudong Zhu, Fei Deng, Zhenyao Wang, Jiangxue Pan<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Host:</span><br/>
+              Cao Kefan<br/>
             </div>
-          </div>
-          <div class="agenda-item left-txt">
             <div class="item-title">
-              PANEL 6: New Technology
+              Challenges and Opportunities from Technological Innovation
             </div>
             <div class="item-location">
               Irvine Auditorium
@@ -438,10 +480,14 @@
             <div class="item-desc">
               How will new forces shape the trajectories of technology development in China and in the world? As college students, how should we leverage surrounding opportunities to make a dent in the universe?<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
+              Shuling Ying, Weixing Chen, Kebin Dai, Jeff Garzik, Patrick Dai<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Host:</span><br/>
+              Yijia Chen
             </div>
+          </div>
+          <div class="agenda-item left-txt">
             <div class="item-time">
-              1:30PM - 3:30PM
+              12:30PM - 3:15PM
             </div>
             <div class="item-title">
               Closing Ceremony
@@ -450,8 +496,9 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
+              Closing remarks will be given by Summit Vice President and Vice Dean of the Wharton School, followed by four keynote speakers.<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
+              Tiankai Cui, Pete Walker, Zhenyao Wang, Gaofei Wang<br/>
             </div>
           </div>
         </div>
