--- a/html/about.html
+++ b/html/about.html
@@ -782,7 +782,7 @@
         <h5>Member</h5>
       </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/Love.jpg">
+        <img class="img-fluid" src="../assets/images/MaCherie.jpg">
         <h4>Chelsie Xu</h4>
         <h5>Member</h5>
         <div class="links">
