--- a/html/agenda-ch.html
+++ b/html/agenda-ch.html
@@ -430,7 +430,7 @@
               The Study
             </div>
             <div class="item-desc">
-              中外青年创新故事分享，青年学者互动提问<br/>
+              与青年领袖一起玩转社会创新<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾:</span><br/>
               王一舟，苗世明，王赛<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">主持人:</span><br/>
