--- a/html/speakers.html
+++ b/html/speakers.html
@@ -967,7 +967,7 @@
 
           </div>
           <div class="col-md-4 col-6 center-txt speaker-item">
-            <img class="speaker-img buttonImg" src="../assets/images/Yijia_Chen.jpg"/ speaker-name="YijiaChen">
+            <img class="speaker-img" src="../assets/images/Yijia_Chen.jpg"/ speaker-name="YijiaChen">
             <div class="speaker-name">Yijia Chen</div>
             <div class="speaker-title">Financial Commentator at Reuters</div>
 
