minor fixes again

--- a/html/speakers.html
+++ b/html/speakers.html
@@ -298,7 +298,7 @@
         <div class="row">
           <div class="col-md-auto col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Ying_Fu.jpeg"/ speaker-name="YingFu">
-            <div class="speaker-name">Fu Ying</div>
+            <div class="speaker-name">Ying Fu</div>
             <div class="speaker-title">Vice Chairperson of NPC Foreign Affairs Committee</div>
 
             <!-- The Modal -->
@@ -748,7 +748,7 @@
         <div class="row" id="inno-talk">
           <div class="col">
             <div class="panels-header">
-              创业对谈
+              INNO Talk
             </div>
           </div>
         </div>
