added wen zhou pic

--- a/html/home-ch.html
+++ b/html/home-ch.html
@@ -453,9 +453,9 @@
   </div>
 
   <div class="section-action" id="speakers-section-action">
-      <a href="/past-ch">
+      <a href="/speakers-ch">
         <div class="section-action-btn">
-          关于更多 <i class="icofont icofont-simple-right"></i>
+          更多本届嘉宾 <i class="icofont icofont-simple-right"></i>
         </div>
       </a>
   </div>
