--- a/html/home.html
+++ b/html/home.html
@@ -436,7 +436,7 @@
   </div>
 
   <div class="section-action" id="speakers-section-action">
-      <a href="/panels">
+      <a href="/speakers">
         <div class="section-action-btn">
           More About Speakers <i class="icofont icofont-simple-right"></i>
         </div>
