--- a/html/speakers-ch.html
+++ b/html/speakers-ch.html
@@ -641,7 +641,7 @@
 
           </div>
           <div class="col-md-3 col-6 center-txt speaker-item">
-            <img class="speaker-img buttonImg" src="../assets/images/placeholder-female.jpg"/ speaker-name="WenZhou">
+            <img class="speaker-img buttonImg" src="../assets/images/Wen_Zhou.jpg"/ speaker-name="WenZhou">
             <div class="speaker-name">Wen Zhou</div>
             <div class="speaker-title">3.1 Phillip Lim 首席执行官</div>
 
