--- a/html/speakers.html
+++ b/html/speakers.html
@@ -600,7 +600,7 @@
             <div class="speaker-title">Founder of Mountain Top</div>
           </div>
           <div class="col-md-3 col-6 center-txt speaker-item">
-            <img class="speaker-img buttonImg" src="../assets/images/placeholder-female.jpg"/ speaker-name="WenZhou">
+            <img class="speaker-img buttonImg" src="../assets/images/Wen_Zhou.jpg"/ speaker-name="WenZhou">
             <div class="speaker-name">Wen Zhou</div>
             <div class="speaker-title">CEO of 3.1 Philip Lim</div>
 
