--- a/html/panels-ch.html
+++ b/html/panels-ch.html
@@ -594,7 +594,7 @@
                 <div class="speaker-title">泰洋川禾创始人</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img buttonImg" src="../assets/images/placeholder-female.jpg"/ speaker-name="WenZhou">
+                <img class="speaker-img buttonImg" src="../assets/images/Wen_Zhou.jpg"/ speaker-name="WenZhou">
                 <div class="speaker-name">Wen Zhou</div>
                 <div class="speaker-title">3.1 Phillip Lim 首席执行官</div>
               </div>
