--- a/html/panels.html
+++ b/html/panels.html
@@ -611,7 +611,7 @@
                 <div class="speaker-title">Founder of Mountain Top</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/ speaker-name="WenZhou">
+                <img class="speaker-img" src="../assets/images/Wei_Zhou.jpg"/ speaker-name="WenZhou">
                 <div class="speaker-name">Wen Zhou</div>
                 <div class="speaker-title">CEO of 3.1 Philip Lim</div>
               </div>
